bug squash

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -174,7 +174,7 @@
 }
 
 .util-container h1{
-  padding-bottom: 6px;
+  padding-bottom: 10px;
 }
 
 .empty-dropdown{
