--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -75,7 +75,7 @@
 }
 
 .post-body {
-  display: block;
+  padding-top: 2px;
 }
 
 .post-index {
